if/c#/hpdf.cs


    public void SetRGBFill(float r, float g, float b) {
        HPDF_Page_SetRGBFill(hpage, r, g, b);
    }

    public void SetRGBStroke(float r, float g, float b) {
        HPDF_Page_SetRGBStroke(hpage, r, g, b);
    }

    public void SetCMYKFill(float c, float m, float y, float k) {
        HPDF_Page_SetCMYKFill(hpage, c, m, y, k);
    }

    public void SetCMYKStroke(float c, float m, float y, float k) {
        HPDF_Page_SetCMYKStroke(hpage, c, m, y, k);
    }

    public void ExecuteXObject(HPdfImage xobj) {
        HPDF_Page_ExecuteXObject(hpage, xobj.GetHandle());
    }

    public void DrawImage(HPdfImage image, float x, float y,
                float width, float height) {
        HPDF_Page_DrawImage(hpage, image.GetHandle(), x, y, width, height);
    }

    public void Circle(float x, float y, float ray) {
        HPDF_Page_Circle(hpage, x, y, ray);
    }

    public void Arc(float x, float y, float ray, float ang1, float ang2) {
        HPDF_Page_Arc(hpage, x, y, ray, ang1, ang2);
    }

    public void TextOut(float xpos, float ypos, string text) {
        HPDF_Page_TextOut(hpage, xpos, ypos, text);
    }

    public void TextRect(float left, float top, float right,
                float bottom, string text, HPdfTextAlignment align,
                ref uint len) {
        HPDF_Page_TextRect(hpage, left, top, right, bottom, text, align, ref len);
    }

    public void SetSlideShow(HPdfTransitionStyle type, float disp_time,
                float trans_time) {
        HPDF_Page_SetSlideShow(hpage, type, disp_time, trans_time);
    }

    public IntPtr GetHandle() {
        return hpage;
    }
}

public class HPdfFont {
    [DllImport("libhpdf.dll")]
    private extern static string HPDF_Font_GetFontName(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static string HPDF_Font_GetEncodingName(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static int HPDF_Font_GetUnicodeWidth(IntPtr hfont,
            ushort code);

    [DllImport("libhpdf.dll")]
    private extern static HPdfBox HPDF_Font_GetBBox(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static int HPDF_Font_GetAscent(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static int HPDF_Font_GetDescent(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Font_GetXHeight(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Font_GetCapHeight(IntPtr hfont);

    [DllImport("libhpdf.dll")]
    private extern static HPdfTextWidth HPDF_Font_TextWidth(IntPtr hfont,
            string text, uint len);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Font_MeasureText(IntPtr hfont,
            string text, uint len, float width, float font_size,
            float char_space, float word_space, int wordwrap,
            ref float real_width);


    IntPtr hfont;

    public HPdfFont(IntPtr hfont) {
        if (hfont == IntPtr.Zero) {
            throw new Exception("cannot create HPdfFont object.");
        }

        this.hfont = hfont;
    }

    public IntPtr GetHandle() {
        return hfont;
    }

    public string GetFontName() {
        return HPDF_Font_GetFontName(hfont);
    }

    public string GetEncodingName() {
        return HPDF_Font_GetEncodingName(hfont);
    }

    public int GetUnicodeWidth(ushort code) {
        return HPDF_Font_GetUnicodeWidth(hfont, code);
    }

    public HPdfBox GetBBox() {
        return HPDF_Font_GetBBox(hfont);
    }

    public int GetAscent() {
        return HPDF_Font_GetAscent(hfont);
    }

    public int GetDescent() {
        return HPDF_Font_GetDescent(hfont);
    }

    public uint GetXHeight() {
        return HPDF_Font_GetXHeight(hfont);
    }

    public uint GetCapHeight() {
        return HPDF_Font_GetCapHeight(hfont);
    }

    public HPdfTextWidth TextWidth(string text, uint len) {
        return HPDF_Font_TextWidth(hfont, text, len);
    }

    public uint MeasureText(string text, uint len, float width,
            float font_size, float char_space, float word_space,
            int wordwrap, ref float real_width) {
        return HPDF_Font_MeasureText(hfont, text, len, width, font_size,
            char_space, word_space, wordwrap,
            ref real_width);
    }
}

public class HPdfOutline {
    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Outline_SetOpened(IntPtr houtline,
        int opened);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Outline_SetDestination(IntPtr houtline,
        IntPtr hdest);

    IntPtr houtline;

    public HPdfOutline(IntPtr houtline) {
        if (houtline == IntPtr.Zero) {
            throw new Exception("cannot create HPdfOutline object.");
        }

        this.houtline = houtline;
    }

    public IntPtr GetHandle() {
        return houtline;
    }

    public void SetOpened(bool opened) {
        int iopened;

        if (opened)
            iopened = HPdfDoc.HPDF_TRUE;
        else
            iopened = HPdfDoc.HPDF_FALSE;

        HPDF_Outline_SetOpened(houtline, iopened);
    }

    public void SetDestination(HPdfDestination dest) {
        HPDF_Outline_SetDestination(houtline, dest.GetHandle());
    }
}

public class HPdfEncoder {
    IntPtr hencoder;

    public HPdfEncoder(IntPtr hencoder) {
        if (hencoder == IntPtr.Zero) {
            throw new Exception("cannot create HPdfEncoder object.");
        }

        this.hencoder = hencoder;
    }

    [DllImport("libhpdf.dll")]
    private extern static HPdfEncoderType HPDF_Encoder_GetType(IntPtr
                hencoder);

    [DllImport("libhpdf.dll")]
    private extern static HPdfByteType HPDF_Encoder_GetByteType(IntPtr
                hencoder, string text, uint index);

    [DllImport("libhpdf.dll")]
    private extern static ushort HPDF_Encoder_GetUnicode(IntPtr
                hencoder, ushort code);

    [DllImport("libhpdf.dll")]
    private extern static HPdfWritingMode HPDF_Encoder_GetWritingMode(IntPtr
                hencoder);


    public IntPtr GetHandle() {
        return hencoder;
    }

    public HPdfEncoderType GetEncoderType() {
        return HPDF_Encoder_GetType(hencoder);
    }

    public HPdfByteType GetByteType(string text, uint index) {
        return HPDF_Encoder_GetByteType(hencoder, text, index);
    }

    public ushort GetUnicode(ushort code) {
        return HPDF_Encoder_GetUnicode(hencoder, code);
    }

    public HPdfWritingMode GetWritingMode() {
        return HPDF_Encoder_GetWritingMode(hencoder);
    }

}

public class HPdfDestination {
    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetXYZ(IntPtr hdest,
        float left, float top, float zoom);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFit(IntPtr hdest);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFitH(IntPtr hdest,
        float top);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFitV(IntPtr hdest,
        float left);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFitR(IntPtr hdest,
        float left, float bottom, float right, float top);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFitB(IntPtr hdest);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFitBH(IntPtr hdest,
        float top);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Destination_SetFitBV(IntPtr hdest,
        float left);

    IntPtr hdest;

    public HPdfDestination(IntPtr hdest) {
        if (hdest == IntPtr.Zero) {
            throw new Exception("cannot create HPdfDestination object.");
        }

        this.hdest = hdest;
    }

    public void SetXYZ(float left, float top, float zoom) {
        HPDF_Destination_SetXYZ(hdest, left, top, zoom);
    }

    public void SetFit() {
        HPDF_Destination_SetFit(hdest);
    }

    public void SetFitH(float top) {
        HPDF_Destination_SetFitH(hdest, top);
    }

    public void SetFitV(float left) {
        HPDF_Destination_SetFitV(hdest, left);
    }

    public void SetFitR(float left, float bottom, float right, float top) {
        HPDF_Destination_SetFitR(hdest, left, bottom, right, top);
    }

    public void SetFitB() {
        HPDF_Destination_SetFitB(hdest);
    }

    public void SetFitBH(float top) {
        HPDF_Destination_SetFitBH(hdest, top);
    }

    public void SetFitBV(float left) {
        HPDF_Destination_SetFitBV(hdest, left);
    }

    public IntPtr GetHandle() {
        return hdest;
    }
}

public class HPdfAnnotation {
    IntPtr hannot;

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_LinkAnnot_SetHighlightMode(IntPtr hannot,
        HPdfAnnotHighlightMode mode);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_LinkAnnot_SetBorderStyle(IntPtr hannot,
        float width, ushort dash_on, ushort dash_off);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_TextAnnot_SetIcon(IntPtr hannot,
        HPdfAnnotIcon icon);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_TextAnnot_SetOpened(IntPtr hannot,
        int opened);


    public HPdfAnnotation(IntPtr hannot) {
        if (hannot == IntPtr.Zero) {
            throw new Exception("cannot create HPdfAnnotation object.");
        }

        this.hannot = hannot;
    }

    public IntPtr GetHandle() {
        return hannot;
    }

    public void SetHighlightMode(HPdfAnnotHighlightMode mode) {
        HPDF_LinkAnnot_SetHighlightMode(hannot, mode);
    }

    public void SetBorderStyle(float width, ushort dash_on, ushort dash_off) {
        HPDF_LinkAnnot_SetBorderStyle(hannot, width, dash_on, dash_off);
    }

    public void SetIcon(HPdfAnnotIcon icon) {
        HPDF_TextAnnot_SetIcon(hannot, icon);
    }

    public void SetOpened(bool opened) {
        int flg;

        if (opened)
            flg = HPdfDoc.HPDF_TRUE;
        else
            flg = HPdfDoc.HPDF_FALSE;

        HPDF_TextAnnot_SetOpened(hannot, flg);
    }

}

public class HPdfXObject {
    protected IntPtr hobj;

    public HPdfXObject(IntPtr hobj) {
        if (hobj == IntPtr.Zero) {
            throw new Exception("cannot create HPdfImage object.");
        }

        this.hobj = hobj;
    }

    public IntPtr GetHandle() {
        return hobj;
    }
}

public class HPdfImage: HPdfXObject {

    [DllImport("libhpdf.dll")]
    private extern static HPdfPoint HPDF_Image_GetSize(IntPtr image);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Image_GetWidth(IntPtr image);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Image_GetHeight(IntPtr image);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Image_GetBitsPerComponent(IntPtr image);

    [DllImport("libhpdf.dll")]
    private extern static string HPDF_Image_GetColorSpace(IntPtr image);

    [DllImport("libhpdf.dll")]
    private extern static uint HPDF_Image_SetColorMask(IntPtr image,
        uint rmin, uint rmax, uint gmin, uint gmax, uint bmin, uint bmax);

    [DllImport("libhpdf.dll")]
    private extern static string HPDF_Image_SetMaskImage(IntPtr image,
        IntPtr mask_image);

    public HPdfImage(IntPtr hobj): base (hobj)  {
    }

    public HPdfPoint GetSize() {
        return HPDF_Image_GetSize(hobj);
    }

    public uint GetWidth() {
        return HPDF_Image_GetWidth(hobj);
    }
